# dinary

./: .claudeignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CLAUDE.md  Dockerfile  README.md  activate.sh  data.json  docker-compose.yml  index.html  invoke.yml  objects.inv  package-lock.json  package.json  pyproject.toml  pytest.ini  search.json  sitemap.xml  tasks.py  vitest.config.js  wordbot-functional-description.md  wordgram-functional-description.md  wordgram-implementation-plan.md
.deploy.example/: .env  README.md  import_sources.json  litestream.yml  llm_providers.toml  llms.toml
.github/.plans/: architecture.md  expense_tracker_architecture.md  expense_tracker_project_description.md  task.md
.github/workflows/: ci.yml  docs.yml  pip_publish.yml  static.yml
.plans/: analytics.md  architecture.md  cloud-security.md  deploy-oracle-no-db.md  exchange-rates.md  frontend-evaluation.md  income.md  llm-providers.md  phase0.md  phase1.md  primary-rollback.md  pwa-stats-update-events.md  receipt-fetching.md  receipt-pipeline.md  sheets.md  sql-vs-ibis-comparison.md  storage-migration.md  task.md  tasks-windows-support.md  vue-refactor.md
.plans/design/: Design System.html  Future Screens Guide.md
analytics/: index.html
builds/tests/: index.html
cloudflare-setup/: index.html
common/: 404.html  objects.inv  search.json
common/reference/: index.html
deploy-oracle/: index.html
deploy-selfhost/: index.html
development/: index.html
docs/: mkdocs.yml
google-sheets-setup/: index.html
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_24919348b8810132_task_py.html  z_2795f89fe87e2487_exchange_rates_py.html  z_2795f89fe87e2487_llm_bootstrap_py.html  z_2795f89fe87e2487_llm_chat_py.html  z_2795f89fe87e2487_llm_client_py.html  z_2795f89fe87e2487_llm_storage_py.html  z_2795f89fe87e2487_llmbroker_py.html  z_2795f89fe87e2487_montenegrin_receipt_parser_py.html  z_2795f89fe87e2487_nbp_py.html  z_2795f89fe87e2487_nbs_py.html  z_2795f89fe87e2487_rate_helpers_py.html  z_2795f89fe87e2487_receipt_parsing_py.html  z_2795f89fe87e2487_receipt_types_py.html  z_2795f89fe87e2487_serbian_receipt_parser_py.html  z_2795f89fe87e2487_sheets_client_py.html  z_2b92383ea193785a_dispatch_py.html  z_2b92383ea193785a_montenegrin_py.html  z_2b92383ea193785a_serbian_py.html  z_2b92383ea193785a_types_py.html  z_3e0ff682768d668c_catalog_py.html  z_3e0ff682768d668c_category_apply_py.html  z_3e0ff682768d668c_category_seed_py.html  z_3e0ff682768d668c_classification_rules_py.html  z_3e0ff682768d668c_currencies_py.html  z_3e0ff682768d668c_db_migrations_py.html  z_3e0ff682768d668c_expenses_py.html  z_3e0ff682768d668c_income_py.html  z_3e0ff682768d668c_receipts_py.html  z_3e0ff682768d668c_sql_loader_py.html  z_3e0ff682768d668c_storage_py.html  z_3ef7fdf0a14ed4dd_item_normalizer_py.html  z_3ef7fdf0a14ed4dd_llm_client_py.html  z_3ef7fdf0a14ed4dd_persist_py.html  z_3ef7fdf0a14ed4dd_receipt_classifier_py.html  z_3ef7fdf0a14ed4dd_store_resolver_py.html  z_3ef7fdf0a14ed4dd_task_py.html  (+135 more)
installation/: index.html
operations/: index.html
pwa-install/: index.html
reference/: index.html
ru/: 404.html  index.html  objects.inv  search.json  sitemap.xml
ru/analytics/: index.html
ru/cloudflare-setup/: index.html
ru/deploy-oracle/: index.html
ru/deploy-selfhost/: index.html
ru/development/: index.html
ru/google-sheets-setup/: index.html
ru/installation/: index.html
ru/operations/: index.html
ru/pwa-install/: index.html
ru/reference/: index.html
ru/search/: search_index.json
ru/taxonomy/: index.html
scripts/: setup-test-env.sh  verup.sh
search/: search_index.json
specs/: README.md
specs/architecture/: architecture.md  frontend-evaluation.md  problem-statement.md
specs/plans/: 2026-05-17-services-refactor.md  2026-05-24-code-review-cleanup.md  2026-06-21-llmbroker-broker-interface.md  2026-06-21-llmbroker-shared-state-sqlite.md  adapters-receipts-subpackage.md  analytics-ai.md  analytics-llm-secrets.md  analytics-pwa.md  analytics.md  backend.md  catalog-consolidation.md  category-set-switch-and-preview.md  category-templates-phase-1-schema-seed.md  category-templates-phase-2-domain.md  category-templates-phase-3-api.md  category-templates-phase-4-pwa.md  category-templates.md  classification-backend-done.md  classification-background-task-done.md  classification-pwa.md  dinary-ai.md  llmbroker-extraction.md  llmbroker-pool-init-refactor.md  llmbroker-preset.md  llmbroker-upgrade.md  montenegro-receipts.md  phase0-done.md  phase1-done.md  primary-rollback-done.md  pwa.md  receipt-pipeline.md  receipt-stuck-recovery.md  remove-import-pipeline.md  repo-files-structure-refactor-done.md  storage-migration-done.md  yoyo-squash.md
specs/reference/: analytics-ai.md  architecture.md  catalog-api.md  category-templates.md  classification-pipeline.md  (+13 more)
static/: index.html  manifest.json  sw.js
tasks/: __init__.py  _backup.py  _common.py  _deploy.py  _import.py  _local.py  _reports.py  _setup.py  analytics.py  backups.py  backups_replica.py  backups_restore.py  backups_status.py  backups_yandex.py  constants.py  db.py  deploy.py  dev.py  dinary_ai.py  env.py  healthcheck.py  imports.py  receipt.py  reports.py  restore_utils.py  server.py  setup.py  sql.py  ssh_utils.py
tests/: conftest.py  test_admin_catalog.py  test_api.py  test_api_catalog.py  test_catalog_writer.py  test_concurrency_real_db.py  test_config.py  test_currency_rates.py  test_dinary.py  test_duckdb.py  test_expense_import.py  test_import_sheet.py  test_ledger_repo.py  test_main.py  test_migrations.py  test_rate_prefetch_task.py  test_report_2d_3d.py  test_reports_expenses.py  test_reports_income.py  test_reports_verify_budget.py  test_reports_verify_income.py  test_runtime_map.py  test_seed_config.py  test_services.py  test_sheet_logging.py  test_sheet_mapping.py  test_sheets.py  test_sql_loader.py  test_sync.py  test_tasks.py  test_tools_sql.py  test_webapp_api_contract.py
webapp/: index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
(+216200 files in other folders)
